Project "spiritonline" {
    database_type: "mysql"
}

Table "accounts" {
  "user_id" bigint [pk, increment, not null]
  "screenname" varchar(64) [not null]
  "mail" varchar(128) [not null]
  "priv_status" tinyint [not null, default: 0]
  "acs_status" tinyint [not null, default: 0]
  "is_verified" boolean [not null, default: false]
  "last_updated_on" datetime(3) [not null]

  Indexes {
    screenname [name: "idx_screenname"]
    mail [name: "idx_mail"]
  }
}

Table "users" {
    "user_id" bigint [pk, not null, ref: > accounts.user_id]
    "avatar_hash" varchar(32) 
    "contact_list_rev" bigint [not null, default: 0]
    "last_cl_update" datetime(3) 
    "last_login" datetime(3)
    "first_login" datetime(3)
    "signup_date" datetime(3) [not null]
    "last_updated_on" datetime(3) [not null]
}

Table "profiles" {
    "user_id" bigint [pk, not null, ref: > accounts.user_id]
    "status_message" text
    "away_message" text
    "offline_message" text
    "last_updated_on" datetime(3) [not null]
}

Table "contacts" {
    "sender_id" bigint [not null, ref: > accounts.user_id]
    "friend_id" bigint [not null, ref: > accounts.user_id]
    "reason" mediumtext
    "is_blocked" boolean [not null, default: false]
    "added_on" datetime(3) [not null]
    "last_updated_on" datetime(3) [not null]

    Indexes {
        sender_id [name: "idx_sender_id"]
        friend_id [name: "idx_friend_id"]
        (sender_id, friend_id) [unique, name: "udx_sender_id_friend_id"]
    }
}

Table "app_passwords" {
    "user_id" bigint [not null, ref: > accounts.user_id]
    "type" varchar(32) [not null]
    "contents" mediumtext
    "last_updated_on" datetime(3) [not null]

    Indexes {
        (user_id, type) [unique, name: "udx_user_id_type"]
    }
}

// WFC Specific

Table "wfc_accounts" { 
    "wfc_id" bigint [pk, increment, not null]
    "linked_id" bigint [ref: > accounts.user_id]
    "console_sns" json
    "console_fcs" json
    "ip_addrs" json
    "mac_addrs" json
    "last_updated_on" datetime(3) [not null]

    Indexes {
        linked_id [name: "idx_linked_id"]
    }
}

Table "wfc_suspensions" {
    "audit_id" bigint [pk, not null]
    "wfc_id" bigint [not null, ref: > wfc_accounts.wfc_id]
    "moderator_id" bigint [not null, ref: > accounts.user_id]
    "ban_message" longtext
    "ban_reason" longtext
    "last_banned_on" datetime(3) [not null]
    "ban_expires_on" datetime(3)

    Indexes {
        wfc_id [name: "idx_wfc_id"]
        moderator_id [name: "idx_moderator_id"]
    }
}

// iwmaster

Table "iwmaster_blocked" {
    "block_id" bigint [pk, not null]
    "ip_addr" varchar(16) [not null]
    "ban_message" longtext
    "is_active" boolean [not null, default:true]
    "last_banned_on" datetime(3) [not null]

    Indexes {
        ip_addr [unique, name: "udx_ip_addr"]
    }
}